# interface-spec

./: .gitignore  .mergify.yml  .netlify.sh  CODEOWNERS  LICENSE  README.md  ci-pr.nix  default.nix  git-describe.txt  netlify.toml  shell.nix
.github/workflows/: antora-branch.yml  cddl.yml  check-cddl-candid.yml  isabelle.yml  master-preview.yml  nix-build.yml  preview-deployment.yml
.github/workflows/scripts/: pool.py  release-canister.py
docusaurus/: docusaurus.config.js  package-lock.json  package.json
docusaurus/docs/: http-gateway-protocol-spec.md  index.md
docusaurus/docs/_attachments/: certificates.cddl  chunked-wasms.cddl  http-gateway.did  ic.did  interface-spec-changelog.md  requests.cddl
docusaurus/src/pages/: index.js
impl/: .hlint.yaml  cabal.project  cabal.project.freeze  ic-ref.cabal  shell.nix
impl/src/: ic-ref-run.hs  ic-ref-test.hs  ic-ref.hs  ic-request-id.hs  unit-tests.hs
impl/src/IC/: CBORPatterns.hs  Canister.hs  Crypto.hs  Funds.hs  HTTP.hs  HashTree.hs  Logger.hs  Management.hs  Ref.hs  Serialise.hs  Types.hs  Utils.hs  Version.hs
impl/src/IC/CBOR/: Utils.hs
impl/src/IC/Canister/: Imp.hs  Interface.hs  Persisted.hs  Pure.hs  Snapshot.hs
impl/src/IC/Certificate/: CBOR.hs
impl/src/IC/Crypto/: BLS.hsc  DER.hs  ECDSA.hs  WebAuthn.hs
impl/src/IC/DRun/: Parse.hs
impl/src/IC/Debug/: JSON.hs
impl/src/IC/HTTP/: CBOR.hs  GenR.hs  Request.hs  RequestId.hs  Status.hs  WAI.hs
impl/src/IC/HTTP/GenR/: Parse.hs
impl/src/IC/HashTree/: CBOR.hs
impl/src/IC/Id/: Forms.hs  Fresh.hs
impl/src/IC/Test/: HashTree.hs  Id.hs  Spec.hs  Universal.hs  WebAuthn.hs
impl/src/IC/Wasm/: Imports.hs  Winter.hs
impl/src/IC/Wasm/Winter/: Persist.hs
impl/test-data/: universal.wat
modules/interface-spec/: ic-nav.adoc
modules/interface-spec/attachments/: ic.did
modules/interface-spec/examples/: ic0.txt  requests.cddl
modules/interface-spec/pages/: index.adoc
modules/interface-spec/partials/: changelog.adoc
nix/: default.nix  generate.nix  gitSource.nix  haskell-packages.nix  ic-webauthn-cli.nix  sources.json
spec/: adoc2md.sh  bitcoin.did  block.py  certificates.cddl  changelog.adoc  changelog.md  fix.py  gen-antora.sh  history.cddl  http-gateway-protocol-spec.md  http-gateway.did  ic-interface-spec.md  ic.did  ic0.rs  ic0.txt  implementation-status.adoc  index.adoc  index.html  index.md  requests.cddl  shell.nix  spellcheck.sh  titles.py  wordlist
spec/_attachments/: chunked-wasms.cddl  http-gateway.did  ic.did  interface-spec-changelog.md  requests.cddl
spec/antora/modules/interface-spec/: ic-nav.adoc
spec/antora/modules/interface-spec/attachments/: requests.cddl
spec/antora/modules/interface-spec/examples/: certificates.cddl  ic.did
spec/antora/modules/interface-spec/pages/: index.adoc
spec/antora/modules/interface-spec/partials/: changelog.adoc
spec/md-spec/: ic-interface-spec.md  index.md  interface-spec-changelog.md
theories/: IC.thy
thys/: IC.thy  ROOT
thys/document/: root.tex
universal-canister/src/: api.rs  main.rs
