cabal-version:       2.2
name:                ic-ref
version:             0.1.0.0
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
build-type:          Simple

flag release
  default: False
  description: Release build, warnings are errors

common logic
  default-language:    Haskell2010
  hs-source-dirs:      src
  other-modules:       IC.Ref
  other-modules:       IC.Types
  other-modules:       IC.Canister
  other-modules:       IC.Id.Fresh
  other-modules:       IC.Logger
  other-modules:       IC.Canister.Imp
  other-modules:       IC.Canister.Interface
  other-modules:       IC.Canister.Pure
  other-modules:       IC.Canister.Persisted
  other-modules:       IC.Wasm.Winter
  other-modules:       IC.Wasm.WinterMemory
  other-modules:       IC.Wasm.Winter.Persist
  other-modules:       IC.Wasm.Imports
  build-depends:       base >=4.11 && <5
  build-depends:       optparse-applicative
  build-depends:       filepath
  build-depends:       hex-text
  build-depends:       crc
  build-depends:       text
  build-depends:       bytestring
  build-depends:       containers
  build-depends:       winter
  build-depends:       mtl
  build-depends:       transformers
  build-depends:       binary
  build-depends:       data-default-class
  build-depends:       vector
  build-depends:       primitive
  build-depends:       utf8-string
  build-depends:       hex-text

executable ic-ref-run
  import: logic
  main-is:             ic-ref-run.hs
  hs-source-dirs:      src
  other-modules:       IC.DRun.Parse
  ghc-options:         -rtsopts
  ghc-options:         -Wall -Wno-name-shadowing
  if flag(release)
    ghc-options:       -Werror

executable ic-ref
  import: logic
  main-is:             ic-ref.hs
  hs-source-dirs:      src
  other-modules:       IC.HTTP.WAI
  other-modules:       IC.HTTP.GenR
  other-modules:       IC.HTTP.CBOR
  other-modules:       IC.HTTP.Status
  other-modules:       IC.HTTP.Request
  other-modules:       IC.HTTP.RequestId
  other-modules:       IC.Debug.JSON
  build-depends:       cborg
  build-depends:       aeson
  build-depends:       warp
  build-depends:       wai
  build-depends:       http-types
  build-depends:       unordered-containers
  build-depends:       cryptonite
  build-depends:       memory
  ghc-options:         -rtsopts
  ghc-options:         -Wall -Wno-name-shadowing
  if flag(release)
    ghc-options:       -Werror
