cabal-version:       2.2
name:                ic-ref
version:             0.2.15
author:              Joachim Breitner
build-type:          Simple

flag release
  default: False
  description: Release build, warnings are errors

-- NB: It might look odd that we are using common stanzas instead of
-- internal library. The main reason is that otherwise,
--
-- > ghcid -c "cabal new-repl"
--
-- cannot be used on all files, due to
--
-- > cabal: Cannot open a repl for multiple components at once.

common version
  hs-source-dirs:      src
  other-modules:       IC.Version
  build-depends:       text

common logic
  hs-source-dirs:      src
  other-modules:       IC.Ref
  other-modules:       IC.Types
  other-modules:       IC.Canister
  other-modules:       IC.Id.Fresh
  other-modules:       IC.Id.Forms
  other-modules:       IC.Logger
  other-modules:       IC.Utils
  other-modules:       IC.Canister.Imp
  other-modules:       IC.Canister.Interface
  other-modules:       IC.Canister.Pure
  other-modules:       IC.Canister.Persisted
  other-modules:       IC.Wasm.Winter
  other-modules:       IC.Wasm.WinterMemory
  other-modules:       IC.Wasm.Winter.Persist
  other-modules:       IC.Wasm.Imports
  build-depends:       base >=4.12 && <5
  build-depends:       filepath
  build-depends:       hex-text
  build-depends:       crc
  build-depends:       text
  build-depends:       bytestring
  build-depends:       containers
  build-depends:       winter
  build-depends:       binary
  build-depends:       mtl
  build-depends:       transformers
  build-depends:       data-default-class
  build-depends:       vector
  build-depends:       primitive
  build-depends:       utf8-string
  build-depends:       hex-text
  build-depends:       cryptonite
  build-depends:       memory

common cbor
  hs-source-dirs:      src
  other-modules:       IC.HTTP.GenR
  other-modules:       IC.HTTP.CBOR
  other-modules:       IC.HTTP.GenR.Parse
  other-modules:       IC.HTTP.RequestId
  other-modules:       IC.Id.Forms
  other-modules:       IC.Crypto
  build-depends:       base >=4.12 && <5
  build-depends:       text
  build-depends:       bytestring
  build-depends:       containers
  build-depends:       unordered-containers
  build-depends:       mtl
  build-depends:       cborg
  build-depends:       cryptonite
  build-depends:       memory
  build-depends:       leb128-cereal
  build-depends:       ed25519
  build-depends:       cryptonite
  build-depends:       memory

common ghc-flags
  default-language:    Haskell2010
  ghc-options:         -rtsopts
  ghc-options:         -Wall -Wno-name-shadowing
  if flag(release)
    ghc-options:       -Werror

executable ic-ref-run
  import: version, logic, ghc-flags
  main-is:             ic-ref-run.hs
  hs-source-dirs:      src
  other-modules:       IC.DRun.Parse
  build-depends:       optparse-applicative

executable ic-ref
  import: version, logic, cbor, ghc-flags
  main-is:             ic-ref.hs
  other-modules:       IC.HTTP
  other-modules:       IC.HTTP.Status
  other-modules:       IC.HTTP.Request
  other-modules:       IC.Debug.JSON
  build-depends:       optparse-applicative
  build-depends:       cborg
  build-depends:       aeson
  build-depends:       warp
  build-depends:       wai
  build-depends:       http-types
  build-depends:       unordered-containers

executable ic-request-id
  import: version, cbor, ghc-flags
  main-is:             ic-request-id.hs
  build-depends:       hex-text
  build-depends:       optparse-applicative

executable ic-ref-test
  import: version, cbor, ghc-flags
  main-is:             ic-ref-test.hs
  other-modules:       IC.Test.Spec
  other-modules:       IC.Test.Options
  other-modules:       IC.Test.Universal
  build-depends:       tasty
  build-depends:       tasty-hunit
  build-depends:       tasty-html
  build-depends:       optparse-applicative
  build-depends:       http-client
  build-depends:       http-types
  build-depends:       random
  build-depends:       filepath
  build-depends:       directory

test-suite unit-test
  import: cbor, ghc-flags
  type: exitcode-stdio-1.0
  main-is: unit-tests.hs
  build-depends: base >= 4 && < 5
  build-depends: tasty >= 0.7
  build-depends: tasty-hunit

